...

    private var cancellable: AnyCancellable?

    override func viewDidLoad() {
        super.viewDidLoad()

        title = "Favourites"
        // Setup Collection View
        setupCollectionView()

        // setup content unavailable
        setupContentUnavailable()

...
    // Create a list layout for the collection view
    private func createLayout() -> UICollectionViewLayout {
        var configuration = UICollectionLayoutListConfiguration(appearance: .grouped)
        configuration.showsSeparators = true
        configuration.backgroundColor = .systemBackground
        configuration.trailingSwipeActionsConfigurationProvider = { indexPath in
            let deleteAction = UIContextualAction(style: .destructive, title: "Unfavourite") {
                [weak self] _, _, handler in
                guard let coin = self?.dataSource.itemIdentifier(for: indexPath) else { return }
                self?.viewModel.removeFromFavourite(coin: coin)
                handler(true)
            }
            deleteAction.image = UIImage(systemName: "heart")
...
